// protoc --gogofaster_out=. antalk.proto
syntax = "proto3";
package proto;

enum CmdType {
  CMD_RESERVE = 0;  //未知请求
  CMD_LOGIN = 1;    //登录请求
  CMD_REGISTER = 2; //注册请求
  CMD_MSG = 3; //消息请求
}

enum DataType {
  DT_PB = 0;    //默认为protobuf
  DT_JSON = 1;  //json
}

enum ErrorCode {
    ERROR_NONE = 0;
    ERROR_PARAM = -1;
    ERROR_PASSWORD = -2;
    ERROR_INTERNAL = -3;
}

message CmdMeta {
    CmdType cmd_type = 1; //消息类型
    int64 req_id = 2;     //请求ID
    bool status = 3;       //请求状态
    ErrorCode error_code = 4;  //错误码
    string error_message = 5; //错误信息
    DataType data_type = 6;      //数据类型
}

message CmdReq {
    CmdMeta meta = 1;
    bytes data = 2;
}

message CmdResp {
    CmdMeta meta = 1;
    bytes data = 2;
}

message CmdNotify {
    CmdMeta meta = 1;
    bytes data = 7;
}
